feat(go_server): APIを追加
